--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
 	  outline: none;              /* בלי מסגרת */
 	  cursor: pointer;            /* סמן רגיל של קישור */
 	} 
-
   #hud code { color:#9ff; }
 </style>
 </head>
 
 <body>
   <div class="page" id="page">
-    <img src="page.png" alt="page">
+    <img src="Page.png" alt="page">
 
     <a class="link" id="L1" href="https://script.google.com/macros/s/AKfycbzio1_Eb3uY4OtnqcMasyqLj1Jd3cqT3s14SxKUE6aOF8wearmp2vg2THZIRoq2VckT/exec" target="_blank"
        style="left:29.5%; top:91.5%; width:56%; height:7%;"></a>
@@ -33,7 +32,6 @@
 
     <a class="link" id="L3" href="https://www.google.com/maps/d/viewer?mid=1ZV3wyw_U2qiEHsuJ9LmLKnY8BGG57NU&femb=1&ll=-6.797819151554549%2C0&z=1" target="_blank"
        style="left:38%; top:73%; width:56%; height:7%;"></a>
-
 
 <script>
   const page = document.getElementById('page');
@@ -124,3 +122,4 @@
 
 </body>
 </html>
+
