--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
 <body>
   <div class="page" id="page">
     <img src="Page.png" alt="page">
-
+    /* טופס */
     <a class="link" id="L1" href="https://script.google.com/macros/s/AKfycbzio1_Eb3uY4OtnqcMasyqLj1Jd3cqT3s14SxKUE6aOF8wearmp2vg2THZIRoq2VckT/exec" target="_blank"
        style="left:29.5%; top:91.5%; width:56%; height:7%;"></a>
-
+	  
+    /* סרטון */
     <a class="link" id="L2" href="https://www.youtube.com/watch?v=42W4tm_5Flg" target="_blank"
        style="left:33.5%; top:83%; width:56%; height:7%;"></a>
-
-    <a class="link" id="L3" href="https://www.google.com/maps/d/viewer?mid=1ZV3wyw_U2qiEHsuJ9LmLKnY8BGG57NU&femb=1&ll=-6.797819151554549%2C0&z=1" target="_blank"
+    /* מפה */
+    <a class="link" id="L3" href="https://www.google.com/maps/d/viewer?mid=1ZV3wyw_U2qiEHsuJ9LmLKnY8BGG57NU" target="_blank"
        style="left:38%; top:73%; width:56%; height:7%;"></a>
+	                             
 
 <script>
   const page = document.getElementById('page');
@@ -122,5 +124,6 @@
 
 </body>
 </html>
+
 
 
