--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a class="link" id="L2" href="https://www.youtube.com/watch?v=42W4tm_5Flg" target="_blank"
        style="left:33.5%; top:83%; width:56%; height:7%;"></a>
     /* מפה */
-    <a class="link" id="L3" href="https://www.google.com/maps/d/viewer?mid=1ZV3wyw_U2qiEHsuJ9LmLKnY8BGG57NU" target="_blank"
+    <a class="link" id="L3" href="https://www.google.com/maps/d/viewer?mid=1ZV3wyw_U2qiEHsuJ9LmLKnY8BGG57NU&femb=1&ll=31.628586918082146%2C34.60339190151444&z=15" target="_blank"
        style="left:38%; top:73%; width:56%; height:7%;"></a>
 	                             
 
@@ -124,6 +124,7 @@
 
 </body>
 </html>
+
 
 
 
