--- a/index.html
+++ b/index.html
@@ -2,22 +2,36 @@
 <html lang="he">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ספירת יעלים</title>
 <style>
-  body { margin: 0; background: #000; display: flex; justify-content: center; }
-  .page { position: relative; width: 100%; max-width: 1920px; }
-  .page img { width: 100%; display: block; }
+body {
+  margin: 0;
+  background: #000;
+}
 
+.page {
+  position: relative;
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;      /* מרכז בלי flex */
+}
 
-	.link {
-	  position: absolute;
-	  display: block;
-	  background: transparent;   /* שקוף לגמרי */
-	  outline: none;              /* בלי מסגרת */
-	  cursor: pointer;            /* סמן רגיל של קישור */
-	} 
-  #hud code { color:#9ff; }
-</style>
+.page img {
+  width: 100%;
+  height: auto;        /* חשוב לנייד */
+  display: block;
+}
+
+.link {
+  position: absolute;
+  display: block;
+  background: transparent;
+  outline: none;
+  cursor: pointer;
+}
+
+ </style>
 </head>
 
 <body>
@@ -124,6 +138,7 @@
 
 </body>
 </html>
+
 
 
 
