--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     
     <!-- טופס -->
     <a class="link" id="L1"
-       href="https://script.google.com/macros/s/AKfycbysN163oJgKTNwIeiPKTBrGyttUXUhPQglAucX0hrtlk9Va2GG8RoETbWEwCN6a7EzJ6Q/exec"
+       href="#"
        target="_blank"
        style="left:28.0%; top:91.0%; width:60%; height:7%;"></a>
 
@@ -142,6 +142,7 @@
   </script>
 </body>
 </html>
+
 
 
 
