--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- טופס (דרך form.html כדי לנקות fbclid) -->
     <a class="link" id="L1"
-       href="./form.html"
+       href="https://bishvilyael.github.io/SfiratYaeelim/form.html"
        target="_self"
        style="left:28.0%; top:91.0%; width:60%; height:7%;"></a>
 
@@ -151,3 +151,4 @@
   </script>
 </body>
 </html>
+
