--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ספירת יעלים</title>
+  <title> ספירת יעלים - קישורים</title>
 
   <style>
     body {
@@ -168,6 +168,7 @@
   </script>
 </body>
 </html>
+
 
 
 
